# Square-plus-plus

./: .gitignore  CMakeLists.txt  README.md  main.cpp  squarepp.cpp  xmake.lua
.xmake/linux/x86_64/: xmake.conf
.xmake/linux/x86_64/cache/: config  detect  history  package  references  repository  toolchain
src/: squarepp.cpp
